<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_margin="@dimen/margin_5"
    tools:context=".ui.gameresult.ResultFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:id="@+id/score_holder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/viewKonfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorCommonText"
            android:id="@+id/marksTxt"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
    </FrameLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10"
        android:layout_margin="@dimen/margin_5"
        android:id="@+id/btnQuit"
        android:scaleType="center"
        android:background="@drawable/button_shape_gradient"
        android:src="@drawable/button_exit_drawable_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_holder"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10"
        android:layout_margin="@dimen/margin_5"
        android:id="@+id/btnRestart"
        android:background="@drawable/button_shape_gradient"
        android:src="@drawable/button_restart_drawable_selector"
        android:scaleType="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_holder"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/historyTxt"
        android:textStyle="bold"
        android:textColor="@color/colorCommonText"
        android:text="@string/score_history"
        android:layout_margin="@dimen/margin_10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRestart"
        app:layout_constraintRight_toRightOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scoreRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/historyTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>